# rust_chat

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/lib/: lib.rs  mod.rs
src/lib/client/: handler.rs  message.rs  mod.rs
src/lib/common/: message.rs  mod.rs  protocol.rs
src/lib/server/: handler.rs  message.rs
tests/: broadcast_test.rs  integration_test.rs
